# anfisa2sprint

./: .gitignore  pyproject.toml  requirements.txt
anfisa_for_friends/: db.json
anfisa_for_friends/anfisa_for_friends/: settings.py  urls.py
anfisa_for_friends/core/: models.py
anfisa_for_friends/homepage/: views.py
anfisa_for_friends/ice_cream/: admin.py  apps.py  models.py  views.py
anfisa_for_friends/ice_cream/migrations/: 0001_initial.py  0002_auto_20230530_1428.py  0003_auto_20230603_1243.py
anfisa_for_friends/templates/homepage/: index.html
anfisa_for_friends/templates/ice_cream/: detail.html  list.html
anfisa_for_friends/templates/includes/: ice_cream_card.html
