[tool.poetry]
name = "anfisa2sprint"
version = "0.1.0"
description = "Migrations"
authors = ["Кирилл Кувшинов <k.koovshinov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
django = "3.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
