[tool.poetry]
name = "anfisa2sprint"
version = "0.1.0"
description = "Migrations"
authors = ["Кирилл Кувшинов <k.koovshinov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
django = "3.2.16"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"
ruff-lsp = "^0.0.27"
flake8 = "^6.0.0"
django-stubs = "^4.2.0"
django-debug-toolbar = "3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
